Bug 170095 - Fileopen PPTX: image with soft edges is faded
Summary: Fileopen PPTX: image with soft edges is faded
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.1
Keywords: bibisected, bisected, filter:pptx
Depends on:
Blocks: 3D-Model
  Show dependency treegraph
 
Reported: 2025-12-23 09:48 UTC by Timur
Modified: 2026-03-22 16:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
PPTX (4.10 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-12-23 09:48 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-12-23 09:48:15 UTC
Created attachment 204761 [details]
PPTX

In attached PPTX the image is faded on fileopen.

Started happening from 7.0 after 
commit cbc13ac0624685582ebd4634812681274db803aa	[log]
author	Mike Kaganski <mike.kaganski@collabora.com>	Tue May 12 20:05:54 2020
tdf#49247: draw soft edges

But this would be missing case, not regression. 
Image has soft edges and 3D efect. LO doesn't support 3D effects.

There is PR underway to override soft edge if there are 3D effects.
Comment 1 Commit Notification 2026-01-20 10:09:52 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/85dbb4dc81bed0b55a1bfbc5dce221b98eaf70d1

tdf#170095 override soft edge if there are 3D effects

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2026-01-20 20:06:12 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/cf40a7d8a315e4ff53f4101d293f2651ac8d5bc2

tdf#170095 override soft edge if there are 3D effects

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Justin L 2026-02-15 00:21:23 UTC
This also fixes forum-mso-en-3348.pptx - the text border was lost on page 1, 6
Comment 4 Gerald Pfeifer 2026-02-26 22:38:37 UTC
Reproduced with

   Version: 25.8.6.0.0+ (X86_64) / LibreOffice Community
   Build ID: a41e93d479a487e3527cfdfea1d73e01f96e2944
   CPU threads: 14; OS: Linux 6.19; UI render: default; VCL: gtk3
   Locale: en-US (en_US.UTF-8); UI: en-US

Verified as fixed with today's daily build

   Version: 26.8.0.0.alpha0+ (X86_64)
   Build ID: 4bf07d898cd3084ff9012f11776d1489b103236c
   CPU threads: 14; OS: Linux 6.19; UI render: default; VCL: gtk3
   Locale: en-US (en_US.UTF-8); UI: en-US